--- a/example/network/index.html
+++ b/example/network/index.html
@@ -1,4 +1,3 @@
-<!-- This is your modified full code -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +33,48 @@
   <div id="graph"></div>
 
   <script>
-    const entities = [/*... your entity list here ...*/];
+    const entities = [
+      { name: 'URF / TX The BOX', categories: ['Investment'], impacts: ['Retail'] },
+      { name: 'SAUVEREIGN', categories: ['Investment'], impacts: ['Branding', 'Retail'] },
+      { name: 'DONGHAI', categories: ['Investment'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'EASTERN SEAS', categories: ['Investment'], impacts: ['Creative Solution'] },
+      { name: 'DANDELION', categories: ['Investment'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'BILI Q', categories: ['Investment'], impacts: ['East.West'] },
+      { name: 'KYOTO ART BANK', categories: ['Investment'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ARAMIS WINES', categories: ['Investment'], impacts: ['Branding'] },
+      { name: 'SEIICHI MIZUNO', categories: ['Forces'], impacts: ['Retail'] },
+      { name: 'MARIO TESTINO', categories: ['Forces'], impacts: ['Branding', 'Retail'] },
+      { name: 'JUDY DOBIAS', categories: ['Forces'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'THE CROSSES', categories: ['Forces'], impacts: ['Creative Solution'] },
+      { name: 'SUNTCHI', categories: ['Forces'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Consultancies'], impacts: ['East.West'] },
+      { name: 'HONG KONG JOCKEY CLUB', categories: ['Consultancies'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'MOLESKINE', categories: ['Consultancies'], impacts: ['Branding'] },
+      { name: 'LUXEMBOURG IN CHINA', categories: ['Cities.culture.art'], impacts: ['Retail'] },
+      { name: 'TONGJI UNIVERSITY', categories: ['Cities.culture.art'], impacts: ['Branding', 'Retail'] },
+      { name: 'UNIVERSITY COLLABORATIONS', categories: ['Cities.culture.art'], impacts: ['East.West', 'Strategy.Culture'] },
+      { name: 'CONFUCIUS SECONDARY SCHOOL', categories: ['Cities.culture.art'], impacts: ['Creative Solution'] },
+      { name: 'DANISH DESIGN AWARD', categories: ['Cities.culture.art'], impacts: ['Strategy.Culture', 'Edu.Learning.Collective'] },
+      { name: 'WORLD DESIGN CAPITAL', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+      { name: 'BANGKOK INTL DESIGN EXPO', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'PENANG INSTITUTE', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+      { name: 'YUAN MUSEUM', categories: ['Cities.culture.art'], impacts: ['East.West'] },
+      { name: 'PALACE MUSEUM', categories: ['Cities.culture.art'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ZENG FANZHI', categories: ['Cities.culture.art'], impacts: ['Branding'] },
+      { name: 'TED / TEDX', categories: ['Ecosystems'], impacts: ['East.West'] },
+      { name: 'BURNING MAN', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'PAN ASIA NETWORK', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'SHANGHAI INDUSTRIAL MUSEUM', categories: ['Ecosystems'], impacts: ['East.West'] },
+      { name: 'EARTH ONE', categories: ['Ecosystems'], impacts: ['Culture', 'Creative Solution'] },
+      { name: 'ALTER PROJECTS', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'ASIA-EUROPE BRIDGE', categories: ['Ecosystems'], impacts: ['Branding'] },
+      { name: 'BLOOMINGDALES NEW YORK', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'THE NEW YORK TIMES', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'URBAN ARCH BI-CITY BIENNALE', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'ISETAN', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'BENETTON', categories: ['Yesteryears'], impacts: ['Branding'] },
+      { name: 'SOTHEBYS AUCTION HOUSE, INTL REALTY', categories: ['Yesteryears'], impacts: ['Branding'] }
+    ];
 
     const impactRingMap = {
       'Strategy.Culture': 0,
@@ -59,13 +99,10 @@
     entities.forEach((entity, index) => {
       const angle = (2 * Math.PI * index) / entities.length;
       let lastNodeId = centerNodeId;
-      let furthestRadius = 0;
 
       entity.impacts.forEach(impact => {
         const ringIndex = impactRingMap[impact] ?? 0;
         const radius = baseRadius + ringIndex * ringSpacing;
-        if (radius > furthestRadius) furthestRadius = radius;
-
         const x = radius * Math.cos(angle);
         const y = radius * Math.sin(angle);
 
@@ -90,28 +127,6 @@
 
         lastNodeId = thisNodeId;
       });
-
-      // Add invisible tip node to extend the radial line
-      const tipRadius = furthestRadius + 20;
-      const tipX = tipRadius * Math.cos(angle);
-      const tipY = tipRadius * Math.sin(angle);
-
-      const tipNodeId = nodeId++;
-      nodes.push({
-        id: tipNodeId,
-        fx: tipX,
-        fy: tipY,
-        radialIndex: index,
-        size: 0,
-        color: 'rgba(0,0,0,0)', // Invisible
-        isTip: true
-      });
-
-      links.push({
-        source: lastNodeId,
-        target: tipNodeId,
-        radialIndex: index
-      });
     });
 
     const gData = { nodes, links };
@@ -123,24 +138,26 @@
     .linkColor(() => '#000000')
     .nodeCanvasObject((node, ctx, globalScale) => {
       if (node.id === centerNodeId) {
+    // Draw concentric rings around center
         ctx.save();
-        ctx.translate(node.x, node.y);
-        ctx.strokeStyle = '#ddd';
-        ctx.lineWidth = 1;
-        for (let i = 0; i < maxLayers; i++) {
-          ctx.beginPath();
-          ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
-          ctx.stroke();
-        }
-        ctx.restore();
-      } else if (!node.isTip) {
-        const size = node.size || 4;
-        ctx.beginPath();
-        ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
-        ctx.fillStyle = node.color || '#666';
-        ctx.fill();
-      }
-    });
+    ctx.translate(node.x, node.y); // Needed to draw arcs at the center node's position
+    ctx.strokeStyle = '#ddd';
+    ctx.lineWidth = 1;
+    for (let i = 0; i < maxLayers; i++) {
+      ctx.beginPath();
+      ctx.arc(0, 0, baseRadius + i * ringSpacing, 0, 2 * Math.PI);
+      ctx.stroke();
+    }
+    ctx.restore();
+  } else {
+    // Draw normal node
+    const size = node.size || 4;
+    ctx.beginPath();
+    ctx.arc(node.x, node.y, size, 0, 2 * Math.PI, false);
+    ctx.fillStyle = node.color || '#666';
+    ctx.fill();
+  }
+});
 
     // Filters UI
     const allCategories = [...new Set(entities.flatMap(e => e.categories))];
@@ -166,7 +183,7 @@
     allImpacts.forEach(imp => impactDiv.appendChild(createCheckbox('impact', imp)));
 
     function getCheckedFilters(name) {
-      return [...document.querySelectorAll(`input[name="${name}"]:checked`)].map(cb => cb.value);
+      return [...document.querySelectorAll(input[name="${name}"]:checked)].map(cb => cb.value);
     }
 
     function applyFilters() {
@@ -186,10 +203,17 @@
 
       const filteredNodes = nodes.filter(n =>
         n.id === centerNodeId || (n.radialIndex !== undefined && radialToInclude.has(n.radialIndex))
-      );
+        );
 
       const nodeMap = new Map(filteredNodes.map(n => [n.id, n]));
-      const filteredLinks = links.filter(l => nodeMap.has(l.source) && nodeMap.has(l.target));
+
+      const filteredLinks = links
+      .filter(link => nodeMap.has(link.source.id ?? link.source) && nodeMap.has(link.target.id ?? link.target))
+      .map(link => ({
+        source: nodeMap.get(link.source.id ?? link.source),
+        target: nodeMap.get(link.target.id ?? link.target),
+        radialIndex: link.radialIndex
+      }));
 
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
     }
