--- a/example/network/index.html
+++ b/example/network/index.html
@@ -110,43 +110,39 @@
     nodes.push({ id: centerNodeId, fx: 0, fy: 0, size: 4, color: '#000000' });
 
     entities.forEach((entity, index) => {
-      const angle = (2 * Math.PI * index) / entities.length;
-      let lastNodeId = centerNodeId;
+    const angle = (2 * Math.PI * index) / entities.length;
+    let lastNodeId = centerNodeId;
 
-      entity.impacts.forEach(impact => {
-        const ringIndex = impactRingMap[impact] ?? 0;
-        const radius = baseRadius + ringIndex * ringSpacing;
-        const x = radius * Math.cos(angle);
-        const y = radius * Math.sin(angle);
+    entity.impacts.forEach(impact => {
+      const ringIndex = impactRingMap[impact] ?? 0;
+      const radius = baseRadius + ringIndex * ringSpacing;
+      const x = radius * Math.cos(angle);
+      const y = radius * Math.sin(angle);
 
-        const thisNodeId = nodeId++;
+      const thisNodeId = nodeId++;
+      const node = {
+        id: thisNodeId,
+        fx: x,
+        fy: y,
+        name: entity.name,
+        categories: entity.categories,
+        flattenedCategories: entity.categories, // <-- Flattened categories here
+        impact: impact,
+        radialIndex: index,
+        size: 6,
+        color: ringColors[ringIndex % ringColors.length]
+      };
+      nodes.push(node);
 
-        const flattenedCategories = entity.categories.flatMap(cat =>
-          [cat.name, ...(cat.subcategories || [])]
-          );
-
-        nodes.push({
-          id: thisNodeId,
-          fx: x,
-          fy: y,
-          name: entity.name,
-          categories: entity.categories, // original format, still useful
-          flattenedCategories,           // for filtering
-          impact: impact,
-          radialIndex: index,
-          size: 6,
-          color: ringColors[ringIndex % ringColors.length]
-        });
-
-        links.push({
-          source: lastNodeId,
-          target: thisNodeId,
-          radialIndex: index
-        });
-
-        lastNodeId = thisNodeId;
+      links.push({
+        source: lastNodeId,
+        target: thisNodeId,
+        radialIndex: index
       });
+
+      lastNodeId = thisNodeId;
     });
+  });
 
     const gData = { nodes, links };
     const Graph = ForceGraph()(document.getElementById('graph'))
