--- a/example/network/index.html
+++ b/example/network/index.html
@@ -42,6 +42,8 @@
     <div id="categoryFilters"></div>
     <h3>APPROACH & IMPACT</h3>
     <div id="impactFilters"></div>
+    <h3>Entities in Category</h3>
+    <div id="entityList"></div>
   </div>
   <div id="graph"></div>
 
@@ -244,6 +246,34 @@
       }));
 
       Graph.graphData({ nodes: filteredNodes, links: filteredLinks });
+
+      // Populate entity list for selected category
+      const entityListContainer = document.getElementById('entityList');
+      entityListContainer.innerHTML = '';
+
+      if (selectedCategories.length === 1) {
+        const matchingNames = new Set();
+
+        nodes.forEach(n => {
+          if (n.name && selectedCategories.some(cat => n.categories.includes(cat))) {
+            matchingNames.add(n.name);
+          }
+        });
+
+        [...matchingNames].sort().forEach(name => {
+          const item = document.createElement('div');
+          item.textContent = name;
+          item.style.cursor = 'pointer';
+          item.style.padding = '2px 4px';
+          item.style.fontSize = '14px';
+          item.style.color = '#333';
+          item.onclick = () => {
+            alert(`You clicked on ${name}`); // Replace with your desired action
+          };
+          entityListContainer.appendChild(item);
+        });
+      }
+
     }
   </script>
 </body>
